<resources>
    <string name="app_name">hiding</string>
    <string name="profile">Profile</string>
    <string name="hire_building">Hire Building</string>
    <string name="nama_tempat_lokasi">Nama tempat, Lokasi</string>
    <string name="open" />
    <string name="close" />
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="detail">Detail</string>
    <string name="marker">marker</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="tersedia">Tersedia</string>
    <string name="harga">Harga</string>
    <string name="kontak">Kontak</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="lokasi">Lokasi</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="name">Name</string>
    <string name="remarks">Remarks</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 8 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully, Log in back</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_umur_error">Age required</string>
    <string name="input_lokasi_error">location required</string>
    <string name="remember_me">Remember me</string>
    <string name="periksa_sekarang">Check Now!</string>
    <string name="gambar_promosi">Gambar Promosi</string>
    <string name="Discount">Discount Buka Bersama 20%</string>
</resources>
