<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_promotion"
        android:contentDescription="@string/gambar_promosi" />
    
    <TextView
        android:id="@+id/txt_promotion"
        android:textStyle="bold"
        android:textColor="#cc6e30"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/Discount"/>

    <Button
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:padding="12dp"
        android:background="@drawable/background_button_register"
        android:id="@+id/check_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/periksa_sekarang" />

</RelativeLayout>