<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DescriptionActivity"
    android:background="#ffffff"
    android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:background="#8b9623"
            android:id="@+id/Desc_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:background="@drawable/white_rectangle"
                    android:layout_marginEnd="30dp"
                    android:text="@string/marker"
                    android:gravity="center"
                    android:id="@+id/bar_title"
                    android:textColor="#2d1908"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:layout_margin="5dp"
                    android:id="@+id/add_cart"
                    android:background="@null"
                    app:srcCompat ="@drawable/ic_arrow_forward_black_24dp"
                    android:layout_gravity="right"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    tools:ignore="VectorDrawableCompat" />
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageView
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="15dp"
        android:id="@+id/image_ruangan"
        android:layout_width="400dp"
        android:layout_height="150dp"
        />
    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="times new roman"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/marker"
        android:layout_marginStart="15dp"
        android:textSize="30sp"
        android:id="@+id/title_ruangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:background="@drawable/white_rectangle"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">
            <LinearLayout
                android:background="@drawable/border_rectangle"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money"/>
            <TextView
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="times new roman"
                android:text="@string/harga"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:fontFamily="times new roman"
                android:text="@string/marker"
                android:textSize="12sp"
                android:id="@+id/harga_ruangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
            <LinearLayout
                android:background="@drawable/white_rectangle"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp">
                <LinearLayout
                    android:background="@drawable/border_rectangle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_capacity"/>
                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                   android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="times new roman"
                    android:text="@string/kapasitas"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/marker"
                    android:textSize="12sp"
                    android:id="@+id/kapasitas_ruangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
        <LinearLayout
            android:background="@drawable/white_rectangle"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">
            <LinearLayout
                android:background="@drawable/border_rectangle"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"/>
            <TextView
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="times new roman"
                android:text="@string/lokasi"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:text="@string/marker"
                android:textSize="12sp"
                android:id="@+id/lokasi_ruangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/white_rectangle"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">
            <LinearLayout
                android:background="@drawable/border_rectangle"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facility"/>
            <TextView
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="times new roman"
                android:text="@string/fasilitas"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:text="@string/marker"
                android:textSize="12sp"
                android:id="@+id/fasilitas_ruangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
            <LinearLayout
                android:background="@drawable/white_rectangle"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp">
                <LinearLayout
                    android:background="@drawable/border_rectangle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time_available"/>
                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="times new roman"
                    android:text="@string/tersedia"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/marker"
                    android:textSize="12sp"
                    android:id="@+id/tanggal_ruangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/white_rectangle"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp">
                <LinearLayout
                    android:background="@drawable/border_rectangle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_contact"/>
                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="times new roman"
                    android:text="@string/kontak"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/marker"
                    android:textSize="12sp"
                    android:id="@+id/kontak_ruangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="#000000"
        android:id="@+id/btm_nav"
        android:visibility="visible">
        <Button
            android:background="#e6dddd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesan_sekarang"/>
    </android.support.design.widget.BottomNavigationView>
</LinearLayout>